# elektron_spice

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: circuit.rs  error.rs  lib.rs  netlist.rs
