[package]
name = "elektron_spice"
version = "0.1.12"
edition = "2021"
description = "Rust parser and models for Kicad Version."
license = "MIT OR Apache-2.0"
repository = "https://github.com/spielhuus/elektron_spice"

[lib]
name = "elektron_spice"

[dependencies]
elektron_sexp = "0.1"
elektron_ngspice = "0.1"
thiserror = "1.0.32"
lazy_static = "1.4.0"
regex = "1.6.0"
ndarray = "0.15.4"
